configured i18n for navbar component

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,6 +1,10 @@
 {
   "translation": {
     "greeting": "Hello",
-    "name": "Jimmy"
+    "name": "Jimmy",
+    "navbar_home": "Home",
+    "navbar_about": "About",
+    "navbar_movielist": "Movies",
+    "navbar_favorited": "Favorited"
   }
 }
