--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -1,6 +1,10 @@
 { 
   "translation": {
     "greeting": "Guten Tag",
-    "name": "Jimmy"
+    "name": "Jimmy",
+    "navbar_home": "Home",
+    "navbar_about": "Über mich",
+    "navbar_movielist": "Movies",
+    "navbar_favorited": "Favoriten"
   }
 }
