added logout functionality

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -6,7 +6,8 @@
       "home": "Home",
       "about": "Über mich",
       "movielist": "Movies",
-      "favorited": "Favoriten"
+      "favorited": "Favoriten",
+      "logout": "Abmelden"
     },
     "home_page" : {
       "greeting": "Hello",
