--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -6,7 +6,8 @@
       "home": "Главная",
       "about": "О себе",
       "movielist": "Лента",
-      "favorited": "Избранное"
+      "favorited": "Избранное",
+      "logout": "Выйти"
     },
     "home_page" : {
       "greeting": "Привет",
