--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -24,7 +24,8 @@
       "skill_8": "Sass/Scss",
       "skill_9": "Адаптивная, кроссбраузерная верстка, Bootstrap 4, Flexbox",
       "skill_10": "Основы React + Redux",
-      "skill_11": "Основы Laravel"  
+      "skill_11": "Основы Laravel",  
+      "skill_12": "Unit testing: Jest"  
     },
     "about_page": {
       "quote": "„Я верю, что продуманная технология может решить любую проблему. <br> И, возможно, спаси мир. <br> По крайней мере, сделать его более прекрасным.“",
